added another paragraph

--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
     in this petty pace from day to day, 
     to the last syllable of recorded time.
 </p>
+<p>
+    And all your yesterdays have lighted fools 
+    the way too dusty death.
+</p>
